fix: fix vertical overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
 .container {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-  gap: 12px;
+    position: relative;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 80px;
+    gap: 12px;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
 }
 
 .spinning-loader {
-  height: 14px;
-  margin-right: 10px;
+    height: 14px;
+    margin-right: 10px;
 }
