--- a/src/components/file-select/FileSelect.css
+++ b/src/components/file-select/FileSelect.css
@@ -3,32 +3,32 @@ input {
 }
 
 .files-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-  gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
 }
 
 .file-container {
-  display: flex;
-  padding: 10px;
-  justify-content: space-between;
-  width: 400px;
-  background-color: #e1f0ff;
-  border-radius: 4px;
-  z-index: 1;
+    display: flex;
+    padding: 10px;
+    justify-content: space-between;
+    width: 400px;
+    background-color: #e1f0ff;
+    border-radius: 4px;
+    z-index: 1;
 }
 
 .close-icon {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  transition: transform 0.2s ease-in-out;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
 }
 
 .close-icon:hover {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .drag-drop-container {
@@ -61,37 +61,38 @@ input {
 }
 
 .file-drop-area {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .drop-area {
-  position: absolute;
-  left: 0;
-  top: 100%;
-  width: 100%;
-  height: 100%;
-  background-color: #4285f4;
-  transition: opacity .3s ease-in-out;
-  opacity: 0;
-  z-index: 10;
+    position: absolute;
+    left: 0;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #4285f4;
+    transition: opacity .3s ease-in-out;
+    opacity: 0;
+    z-index: 10;
 }
 
 .drop-area.dragging {
-  opacity: 1;
-  top: 0;
+    opacity: 1;
+    left: 0;
 }
 
 .drop-area-text {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-weight: bold;
-  text-align: center;
-  z-index: -1;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    z-index: -1;
 }
